[package]
name = "zcfg"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "README.md"
repository = "https://github.com/acmcarther/zcfg"
description = """
No frills library configuration
"""
license = "Apache-2.0"
keywords = ["flag" "flags" "parse" "argument" "config"]

[dependencies]
# This is totally permissive to allow any library to link us.
# Hopefully the lazy_static api doesn't change a lot!
lazy_static = "*"
