[package]
name = "zcfg_flag_parser"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/acmcarther/zcfg"
keywords = ["flag", "parse", "argument", "config"]
description = """
Populate all zcfg configured libraries in your binary using command line flags.
"""

[dependencies.zcfg]
path = "../zcfg"

[dependencies]
itertools = "0.6.0"
