[package]
name = "zcfg_flag_parser"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
readme = "../README.md"
repository = "https://github.com/acmcarther/zcfg"
keywords = ["flag", "parse", "argument", "config"]
license = "Apache-2.0"
description = """
Populate all zcfg configured libraries in your binary using command line flags.
"""

[dependencies.zcfg]
path = "../zcfg"
version = "0.1.0"

[dependencies]
itertools = "^0.6.0"
